[package]
name = "kapacitsur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
integer-encoding = { version = "3.0.2", features = ["tokio_async"] }
prost = "0.9"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
prost-build = "0.5"
